added stylesheet for css

--- a/public/index.html
+++ b/public/index.html
@@ -17,21 +17,7 @@
       crossorigin="anonymous"
       referrerpolicy="no-referrer"
     />
-    <style>
-      * {
-        box-sizing: border-box;
-        margin: 0;
-        padding: 0;
-      }
-      body {
-        font-family: "Montagu Slab", sans-serif;
-        min-height: 100vh;
-        background: #0f172a;
-        color: white;
-        display: flex;
-        flex-direction: column;
-      }
-    </style>
+    <link href="style.css" rel="stylesheet" type="text/css" />
   </head>
   <body>
     <div class="container">
@@ -166,7 +152,7 @@
                 <h4>Billing + Payment</h4>
                 <div class="billingBlock">
                   <p>Renewal Date</p>
-                  <p>12/2/2023</p>
+                  <p>12/2/2024</p>
                 </div>
               </div>
             </div>
