--- a/public/index.html
+++ b/public/index.html
@@ -77,7 +77,7 @@
                 <h4>Plan Details</h4>
                 <p>
                   <i class="fa-solid fa-check"></i>
-                  200 Fast API calls
+                  100 Fast API calls
                 </p>
                 <p>
                   <i class="fa-solid fa-check"></i>
@@ -114,7 +114,7 @@
           <div class="subscription">
             <div class="subscriptionHeader">
               <div>
-                <h3 class="currentPlan">Subscription</h3>
+                <h3 class="currentPlan2">Subscription</h3>
                 <h3>Plan</h3>
               </div>
               <div class="activePlan2">
